--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="utf-8">
     <title>Mastermind</title>
     <style media="screen">
+      body {
+        margin: 0;
+      }
+      .attempt {
+        display: block;
+      }
       .row {
         display: inline-block;
+        height: 64px;
       }
       .token {
         display: inline-block;
-        width: 30px;
-        height: 30px;
+        width: 64px;
+        height: 64px;
       }
     </style>
   </head>
