--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       }
       .row {
         display: inline-block;
-        height: 64px;
+        height: 48px;
       }
       .token {
         display: inline-block;
-        width: 64px;
-        height: 64px;
+        width: 24px;
+        height: 24px;
+        border: 8px solid transparent;
       }
     </style>
   </head>
