Long-term caching

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
   </head>
   <body>
     <main></main>
-    <script src="dist/app.js" charset="utf-8"></script>
+    <script src="dist/app.fb9aa9c220e34e276a9d.js" charset="utf-8"></script>
   </body>
 </html>
