--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         display: inline-block;
         width: 24px;
         height: 24px;
-        border: 8px solid transparent;
+        border: 8px dotted transparent;
       }
     </style>
   </head>
   <body>
     <main></main>
-    <script src="dist/app.fb9aa9c220e34e276a9d.js" charset="utf-8"></script>
+    <script src="dist/app.e560b9569c01b0315856.js" charset="utf-8"></script>
   </body>
 </html>
