--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       }
       .row {
         display: inline-block;
-        height: 48px;
       }
       .token {
         display: inline-block;
@@ -20,10 +19,20 @@
         height: 24px;
         border: 8px dotted transparent;
       }
+      .score {
+        width: 40px;
+        line-height: 40px;
+        height: 40px;
+        display: inline-block;
+        vertical-align: top;
+        text-align: center;
+        font-size: 25px;
+        font-family: Courier;
+      }
     </style>
   </head>
   <body>
     <main></main>
-    <script src="dist/app.e560b9569c01b0315856.js" charset="utf-8"></script>
+    <script src="dist/app.ab2ac74dbc71a0ad3622.js" charset="utf-8"></script>
   </body>
 </html>
