--- a/index.html
+++ b/index.html
@@ -29,10 +29,23 @@
         font-size: 25px;
         font-family: Courier;
       }
+      button {
+        width: 80px;
+        line-height: 32px;
+        height: 40px;
+        display: inline-block;
+        vertical-align: top;
+        font-size: 15px;
+        font-family: Courier;
+        border: 4px solid white;
+      }
+      button:active {
+        background-color: #666;
+      }
     </style>
   </head>
   <body>
     <main></main>
-    <script src="dist/app.ab2ac74dbc71a0ad3622.js" charset="utf-8"></script>
+    <script src="dist/app.1378997040196f6548fd.js" charset="utf-8"></script>
   </body>
 </html>
