Implement dnd with html5 backend

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Mastermind</title>
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no">
     <style media="screen">
       body {
         margin: 0;
@@ -70,13 +72,10 @@
         width: 16.66%;
         display: inline-block;
       }
-      .source__token.highlighted {
-        height: 90%;
-      }
     </style>
   </head>
   <body>
     <main></main>
-    <script src="dist/app.c0b3ea2f6e22958094a6.js" charset="utf-8"></script>
+    <script src="dist/app.235b3d535d34be03af18.js" charset="utf-8"></script>
   </body>
 </html>
