Enable drag preview

--- a/index.html
+++ b/index.html
@@ -72,10 +72,15 @@
         width: 16.66%;
         display: inline-block;
       }
+      .preview__token {
+        width: 30px;
+        height: 30px;
+        display: inline-block;
+      }
     </style>
   </head>
   <body>
     <main></main>
-    <script src="dist/app.91645fbf3a9f1979632d.js" charset="utf-8"></script>
+    <script src="dist/app.8088438ce3174dd5e97d.js" charset="utf-8"></script>
   </body>
 </html>
