--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       button {
         height: 100%;
       }
+      * {
+        font-family: Courier;
+      }
       .attempt {
         display: block;
         width: 100%;
@@ -35,7 +38,6 @@
         float: left;
         position: relative;
         font-size: 25px;
-        font-family: Courier;
         text-align: center;
       }
       .current {
@@ -56,7 +58,7 @@
         line-height: 100%;
         display: inline-block;
         vertical-align: top;
-        font-size: 20px;
+        font-size: 15px;
         font-family: Courier;
         border: none;
       }
@@ -73,14 +75,27 @@
         display: inline-block;
       }
       .preview__token {
-        width: 30px;
-        height: 30px;
+        width: 60px;
+        height: 60px;
         display: inline-block;
+      }
+      .badge {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        line-height: 100px;
+        opacity: 0.7;
+        background-color: #000;
+        color: white;
+        top: 0;
+        left: 0;
+        text-align: center;
+        font-size: 50px;
       }
     </style>
   </head>
   <body>
     <main></main>
-    <script src="dist/app.8088438ce3174dd5e97d.js" charset="utf-8"></script>
+    <script src="dist/app.8a73565aa32df152e614.js" charset="utf-8"></script>
   </body>
 </html>
